<resources>
    <string name="app_name">Phojo</string>
    <string name="password">Password</string>
    <string name="user_tag">User Tag</string>
    <string name="old_password">Old Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="first_name">first_name</string>
    <string name="middle_initial">middle_initial</string>
    <string name="last_name">last_name</string>
    <string name="user_name">user_name</string>

    <string-array name="preference_file_key">
        <item>FIRSTNAME</item>
        <item>LASTNAME</item>
        <item>EMAIL</item>
        <item>PASSWORD</item>
        <item>TAG</item>
    </string-array>

    <string-array name="category_array">
        <item>Vacation</item>
        <item>Date Night</item>
        <item>Party</item>
        <item>Family Reunion</item>
        <item>Spring Break</item>
        <item>Custom</item>
    </string-array>
</resources>